test/fails/bad_generics/infer8.lgl
`t add_op<`t>(`t x, `t y) {
    t result = x + y;
    return result;
}

`u app_mat<`t, `u>(`t->`u m, t x) {
    return m * x;
}

void main() {
    print app_mat(
        add_op([[1., 2.], [2., 1.]], [[2., 1.], [1., 2.]]),
        add_op([1., 2., 3.], [3., 2., 1.])
    );  // Bad matrix dimensions again
}